Fix minor spacing and wrapping issues in Search

--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -16,7 +16,7 @@
   border: none;
   background: var(--almost-white-color);
   width: 100%;
-  padding: 1em 3.5em 1em 1.5em;
+  padding: 1em 6.5em 1em 1.5em;
   font-size: 1rem;
 }
 
@@ -93,12 +93,13 @@
   position: relative;
   text-align: start;
   cursor: pointer;
-  padding: .5em 1.5em .5em 1.5em;
+  padding: .5em 3em .5em 1.5em;
   width: 100%;
   display: inherit;
   border: inherit;
   font: inherit;
   background: inherit;
+  word-break: break-all;
 }
 
 .suggestions button:last-child {
